--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -50,3 +50,14 @@ div {
 h1, h2 {
   margin: 0;
 }
+
+input[type="number"] {
+	-moz-appearance: textfield;
+	-webkit-appearance: textfield;
+	appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	display: none;
+}
