--- a/source/views/blocks/product.html
+++ b/source/views/blocks/product.html
@@ -16,7 +16,7 @@
         <p class="basket__list-provider">@@provider <span class="@@classProvider"></span></p>
       </div>
       <div class="basket__list-count">
-        <div class="count">
+        <div class="count" data-price="@@data" data-sale="@@sale">
           <button class="count__btnMinus count__btn btnDisabled" data-direction="minus" disabled type="button"></button>
           <input class="count__number" type="text" maxlength="2" min="1" value="1">
           <button class="count__btnPlus count__btn" data-direction="plus" type="button"></button>
