--- a/source/views/blocks/product-item.html
+++ b/source/views/blocks/product-item.html
@@ -3,7 +3,8 @@
     <div class="absent__list-wrapper">
       <picture>
         <source srcset="@@src320" media="(max-width: 1023px)" width="80" height="106">
-        <img class="absent__list-img colorImg" src="@@src" alt="t-shirt" width="72" height="96">
+        <source srcset="@@src1024" media="(max-width: 1399px)" width="80" height="106">
+        <img class="absent__list-img colorImg" src="@@src" alt="@@alt" width="72" height="96">
       </picture>
        <div class="absent__list-text">
          <p class="absent__list-name colorText">@@name</p>
