--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -16,6 +16,7 @@ body {
   color: $color-text;
   font-family: $font-base-family;
   height: 100%;
+  width: 100%;
   margin: 0;
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
